--- a/index.html
+++ b/index.html
@@ -157,20 +157,20 @@
         </li>
 
         <!-- YouTube -->
-        <li>
+        <!-- li>
           <svg class="icon generic" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M22 12c0-2.2-.2-3.7-.6-4.6-.3-.7-.8-1.2-1.5-1.5C18.9 5.4 12 5.4 12 5.4s-6.9 0-7.9.5c-.7.3-1.2.8-1.5 1.5C2.2 8.3 2 9.8 2 12s.2 3.7.6 4.6c.3.7.8 1.2 1.5 1.5 1 .5 7.9.5 7.9.5s6.9 0 7.9-.5c.7-.3 1.2-.8 1.5-1.5.4-.9.6-2.4.6-4.6zM10 9.75l5 2.25-5 2.25v-4.5z"/>
           </svg>
           <a href="https://youtube.com/@mbingsdk" target="_blank" rel="noopener">@mbingsdk di YouTube</a>
         </li>
-      </ul>
+      </ul -->
 
       <!-- Rak salju -->
       <div class="shelf"></div>
     </div>
 
     <!-- Pinguin kecil (SVG inline) -->
-    <svg class="penguin" viewBox="0 0 64 64" aria-hidden="true">
+    <!--svg class="penguin" viewBox="0 0 64 64" aria-hidden="true">
       <defs>
         <linearGradient id="b" x1="0" x2="1" y1="0" y2="1">
           <stop offset="0" stop-color="#101318"/><stop offset="1" stop-color="#242b36"/>
@@ -182,7 +182,7 @@
       <circle cx="37.5" cy="26" r="2.1" fill="#111"/>
       <path d="M32 30c2.2 0 4 1 4 2s-1.8 2-4 2-4-1-4-2 1.8-2 4-2z" fill="#f6a500"/>
       <path d="M26 50c2 2 4 3 6 3s4-1 6-3" stroke="#f6a500" stroke-width="3" stroke-linecap="round" fill="none"/>
-    </svg>
+  </svg -->
 
     <!-- Salju turun: beberapa flake saja (hemat CPU) -->
     <div class="snow" id="snow"></div>
