--- a/tantrum.html
+++ b/tantrum.html
@@ -102,7 +102,7 @@
     <span class="corner bl"></span>
     <span class="corner br"></span>
 
-    <h3 class="title">Connect With Me</h3>
+    <h3 class="title">Connect With Us</h3>
 
     <ul class="links">
       <!-- Discord -->
@@ -125,11 +125,11 @@
         <a href="https://instagram.com/tantrum.circle" target="_blank" rel="noopener">@tantrum.circle</a>
       </li>
 
-      <!-- YouTube>
+      <!-- YouTube -->
       <li>
         <svg class="icon" viewBox="0 0 24 24"><path d="M22 12c0-2.2-.2-3.7-.6-4.6-.3-.7-.8-1.2-1.5-1.5C18.9 5.4 12 5.4 12 5.4s-6.9 0-7.9.5c-.7.3-1.2.8-1.5 1.5C2.2 8.3 2 9.8 2 12s.2 3.7.6 4.6c.3.7.8 1.2 1.5 1.5 1 .5 7.9.5 7.9.5s6.9 0 7.9-.5c.7-.3 1.2-.8 1.5-1.5.4-.9.6-2.4.6-4.6zM10 9.75l5 2.25-5 2.25v-4.5z"/></svg>
-        <a href="https://youtube.com/@username" target="_blank" rel="noopener">@username di YouTube</a>
-      </li -->
+        <a href="https://youtube.com/@mbngsdk" target="_blank" rel="noopener">@mbingsdk</a>
+      </li>
     </ul>
   </div>
 </body>
