--- a/soc.html
+++ b/soc.html
@@ -87,11 +87,11 @@
 
   <script>
     const accounts = [
-      { icon: 'fas fa-gamepad', name: 'RobloxUser', color: '#ff4757' },
-      { icon: 'fab fa-tiktok', name: '@tiktok_id', color: '#69c9d0' },
-      { icon: 'fab fa-instagram', name: '@insta_user', color: '#e1306c' },
-      { icon: 'fab fa-discord', name: 'Discord#1234', color: '#5865F2' },
-      { icon: 'fab fa-youtube', name: '/mychannel', color: '#ff0000' }
+      { icon: 'fas fa-gamepad', name: 'mbingsdk', color: '#ff4757' },
+      { icon: 'fab fa-tiktok', name: '@penguinantarctica_', color: '#69c9d0' },
+      { icon: 'fab fa-instagram', name: '@mbingsdk', color: '#e1306c' },
+      { icon: 'fab fa-discord', name: 'mbingsdk', color: '#5865F2' },
+      { icon: 'fab fa-youtube', name: '@mbingsdk', color: '#ff0000' }
     ];
 
     let index = 0;
