--- a/landscape.html
+++ b/landscape.html
@@ -118,7 +118,7 @@
   <div class="container" id="landscape-container">
     <div class="game-frame"></div>
     <div class="camera-frame"></div>
-    <div class="alert-box">✨ New Gift!</div>
+    <div class="alert-box">✨ Penguin Antarctica!</div>
     <div class="social-bar">
       <div class="social-item"><i class="fab fa-instagram"></i>@instagram</div>
       <div class="social-item"><i class="fab fa-discord"></i>@discord</div>
